<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_room"/>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"/>

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_select"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_SQLiteOpenHelper"/>

    <Button
        android:id="@+id/btn_create_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_database"/>

    <Button
        android:id="@+id/btn_soh_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"/>

    <Button
        android:id="@+id/btn_soh_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"/>

    <Button
        android:id="@+id/btn_soh_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"/>

    <Button
        android:id="@+id/btn_soh_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_select"/>

</LinearLayout>